--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     justify-content: space-around;
     text-align: center;
     background: #ABFF4F;
-    color: ABFF4F;
+    color: #131200;
     border: 2px solid black;
     border-radius: 20px;
 }
